--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
