--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphicaloy",
+  "name": "oli",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "localforage": "^1.10.0",
@@ -18,10 +19,12 @@
     "react": "^18.2.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-simple-image-slider": "^2.4.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.2",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
