--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-grid-gallery": "^1.0.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-simple-image-slider": "^2.4.1",
