--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/vue": "^2.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@material-tailwind/react": "^2.1.9",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
@@ -26,7 +28,9 @@
     "react-simple-image-slider": "^2.4.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.12.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
